refactor/tailwind: Refactorización completa de flujos principales con integración visual coherente (Tailwind + glassmorphism)
Refactorizados los siguientes flujos para mantener consistencia visual y estructural:

Registro de usuario

Inicio de sesión

Visualización y detalle de productos

Gestión de carrito y resumen de pago

Pago exitoso (PayPal)

Historial de órdenes

Gestión de productos (listar, agregar, eliminar)

Gestión de categorías (listar, agregar, eliminar)

Gestión de órdenes (admin)

Aplicado diseño mobile-first, Tailwind y estética glassmorphism

Mejorada experiencia UX/UI manteniendo arquitectura y componentes existentes